# filler_game

./: Dockerfile_arena  Dockerfile_python  Dockerfile_python0  README.md  arena.html  docker-compose.yml  env_file.env
arena/: Cargo.toml  Dockerfile
arena/src/game/: board.rs  game_state.rs  mod.rs  piece.rs
arena/src/server/: message.rs  run_server.rs
filler_arena/: setup.py
filler_arena/filler_arena/: __init__.py  arena.py  board.py  piece.py  player.py
filler_arena/filler_arena/command/: run.py
filler_arena/filler_arena/players/: player_random.py
frontend_arena/: app.js  index.html  styles.css
js/: script.js
php_player_template/: Dockerfile  README.md  docker-compose.yml
php_player_template/src/: eval.php  gameClient.php  main.php
python_player/: setup.py
python_player/python_player/: board.py  distance.py  player.py
python_player/python_player/command/: play.py
python_player0/: setup.py
python_player0/python_player0/: board.py  piece.py
python_player0/python_player0/command/: play.py
python_player_template/: Dockerfile  README.md  docker-compose.yml
python_player_template/src/: main.py
python_player_template/src/eval/: eval.py
python_player_template/src/game_client/: game_client.py
v4/: docker-compose.yml  index.html
v4/arena/: Dockerfile  README.md.rs
v4/arena/src/: main.rs
v4/arena/src/game/: board.rs  game_state.rs  (+1 more)
v4/php_player_template/: Dockerfile  composer.json  docker-compose.yml
v4/php_player_template/src/: eval.php  gameClient.php  main.php
v4/python_player_template/: Dockerfile  docker-compose.yml
(+7 files in other folders)
